--- a/Prevu.Synoptics.V3168_Sirplaste/P330.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P330.xaml
@@ -8,7 +8,7 @@
              x:Class="Prevu.Synoptics.P330" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas >
-    <Labels:Pipe Width="141" StatusComponent="292-01-MA1" PipeHeight="Medium" Height="20" RenderTransformOrigin="0.5,0.5" Canvas.Left="92" Canvas.Top="202" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="141" StatusComponent="292-01-MA1" PipeHeight="Medium" Height="20" RenderTransformOrigin="0.5,0.5" Canvas.Left="96" Canvas.Top="202" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -18,7 +18,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="335" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="10" Canvas.Left="335" Canvas.Top="155"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="335" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="10" Canvas.Left="339" Canvas.Top="155"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="114" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="332-21-CV1" Canvas.Left="498" Canvas.Top="582"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="220" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="18" VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" Canvas.Left="609" Canvas.Top="439">
       <Labels:Pipe.RenderTransform>
@@ -32,7 +32,7 @@
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="44" StatusComponent="330-23-CV1" PipeHeight="Medium" Canvas.Left="726" Canvas.Top="730"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="91" StatusComponent="330-23-CV1" PipeHeight="Medium" Canvas.Left="809" Canvas.Top="730"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="180" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="518" Canvas.Top="332">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="180" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="516" Canvas.Top="332">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -42,7 +42,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="130" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="330-21-CV1" Canvas.Left="543" Canvas.Top="522">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="130" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="330-21-CV1" Canvas.Left="541" Canvas.Top="522">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -56,7 +56,7 @@
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="103" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="337-21-CV1" Canvas.Left="968" Canvas.Top="436"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="39" StatusComponent="335-23-CV1" PipeHeight="Medium" Canvas.Left="1187" Canvas.Top="583"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="87" StatusComponent="335-23-CV1" PipeHeight="Medium" Canvas.Left="1261" Canvas.Top="583"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="36" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1049" Canvas.Top="259">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="36" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1046" Canvas.Top="259">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -66,7 +66,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="130" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="335-21-CV1" Canvas.Left="1002" Canvas.Top="375">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="130" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="335-21-CV1" Canvas.Left="999" Canvas.Top="375">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -77,7 +77,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="33" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="1370" Canvas.Top="583"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="343" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Height="5" Canvas.Left="726" Canvas.Top="242">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="331" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Height="5" Canvas.Left="735" Canvas.Top="242">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -87,7 +87,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="165" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Height="5" Canvas.Left="544" Canvas.Top="242">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="157" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Height="5" Canvas.Left="544" Canvas.Top="242">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -129,7 +129,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="96" StatusComponent="320-01-MA1" PipeHeight="Medium" Height="22" RenderTransformOrigin="0.5,0.5" Canvas.Left="115" Canvas.Top="614" HorizontalAlignment="Left" VerticalAlignment="Center" >
+    <Labels:Pipe Width="96" StatusComponent="320-01-MA1" PipeHeight="Medium" Height="22" RenderTransformOrigin="0.5,0.5" Canvas.Left="119" Canvas.Top="614" HorizontalAlignment="Left" VerticalAlignment="Center" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -139,7 +139,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="525" StatusComponent="322-01-MA1" PipeHeight="Medium" Canvas.Left="77" Canvas.Top="412" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
+    <Labels:Pipe Width="525" StatusComponent="322-01-MA1" PipeHeight="Medium" Canvas.Left="81" Canvas.Top="412" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -149,12 +149,12 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="44" StatusComponent="292-01-MA1" PipeHeight="Medium" Height="20" RenderTransformOrigin="0.5,0.5" Canvas.Left="124" Canvas.Top="134" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="68" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="276" Canvas.Top="664" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Labels:Pipe Width="44" StatusComponent="292-01-MA1" PipeHeight="Medium" Height="20" RenderTransformOrigin="0.5,0.5" Canvas.Left="128" Canvas.Top="134" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="68" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="280" Canvas.Top="664" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Rectangle HorizontalAlignment="Left" Height="102" Stroke="White" StrokeThickness="2" VerticalAlignment="Center" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="1350" Canvas.Top="96"/>
     <Machines:STR_BatchReactor HorizontalAlignment="Left" VerticalAlignment="Center" Height="300" Width="137" Canvas.Left="594" Canvas.Top="494" ComponentName="330-41-LT1" TrendName="LEVEL"/>
     <Machines:STR_BatchReactor HorizontalAlignment="Left" VerticalAlignment="Center" Height="300" Width="136" Canvas.Left="1053" Canvas.Top="347" TrendName="LEVEL" ComponentName="335-41-LT1"/>
-    <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="558" Canvas.Top="388">
+    <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="556" Canvas.Top="388">
       <Machines:CV_Valve.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -184,7 +184,7 @@
         </TransformGroup>
       </Machines:CV_Valve.RenderTransform>
     </Machines:CV_Valve>
-    <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="1017" Canvas.Top="241">
+    <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="1014" Canvas.Top="241">
       <Machines:CV_Valve.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -204,7 +204,7 @@
         </TransformGroup>
       </Machines:CV_Valve.RenderTransform>
     </Machines:CV_Valve>
-    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="35" Canvas.Top="250" Height="346" Width="258" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="39" Canvas.Top="250" Height="346" Width="258" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="226" Height="18" Canvas.Left="648" Canvas.Top="150" >
       <Machines:SCW_ScrewConveyor_straight.RenderTransform>
         <TransformGroup>
@@ -215,8 +215,8 @@
         </TransformGroup>
       </Machines:SCW_ScrewConveyor_straight.RenderTransform>
     </Machines:SCW_ScrewConveyor_straight>
-    <Machines:Radar Height="46" Width="52" Canvas.Left="218" Canvas.Top="227" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:SCW_ScrewConveyor_straight Height="22" Width="159" Canvas.Left="150" Canvas.Top="664" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Machines:Radar Height="46" Width="52" Canvas.Left="222" Canvas.Top="227" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:SCW_ScrewConveyor_straight Height="22" Width="159" Canvas.Left="154" Canvas.Top="664" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1329" Canvas.Top="553">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
@@ -319,17 +319,17 @@
             VerticalAlignment="Center" 
             JumpFromLabel="331-01-MA1" 
             JumpToLabel="350-01-MA1" Canvas.Left="1432" Canvas.Top="690"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-		VerticalAlignment="Center" 
-		ComponentName="324-01-MA1" Canvas.Left="827" Canvas.Top="94"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
+		VerticalAlignment="Top" 
+		ComponentName="324-01-MA1" Canvas.Left="827" Canvas.Top="88"/>
     <Labels:DeviceLabel 
-      ComponentName="320-01-MA1" Canvas.Left="118" Canvas.Top="236" Height="55" Width="90" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+      ComponentName="320-01-MA1" Canvas.Left="122" Canvas.Top="236" Height="55" Width="90" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-      ComponentName="322-01-MA1" Canvas.Left="217" Canvas.Top="606" HorizontalAlignment="Left" VerticalAlignment="Center" />
+      ComponentName="322-01-MA1" Canvas.Left="221" Canvas.Top="606" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:DeviceLabel 
-      ComponentName="320-41-LT1" Canvas.Left="199" Canvas.Top="172" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+      ComponentName="320-41-LT1" Canvas.Left="203" Canvas.Top="172" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel 
       JumpFromLabel="292-01-MA1" 
-      JumpToLabel="292-01-MA1" Canvas.Left="53" Canvas.Top="110" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+      JumpToLabel="292-01-MA1" Canvas.Left="57" Canvas.Top="110" HorizontalAlignment="Left" VerticalAlignment="Center"/>
   </Canvas>
 </UserControl>
