--- a/Test/MainWindow.xaml
+++ b/Test/MainWindow.xaml
@@ -9,7 +9,7 @@
         Title="MainWindow" Height="746" Width="1600">
 
 	<ScrollViewer HorizontalScrollBarVisibility="Auto">
-		<Synoptics:PlantView CacheMode="BitmapCache"/>
-	</ScrollViewer>
+        <!--<Synoptics:P230/>-->
+    </ScrollViewer>
 
 </Window>
