V4088: Added component BRAKER

--- a/Prevu.Synoptics.V4088-Polimero/P230.xaml
+++ b/Prevu.Synoptics.V4088-Polimero/P230.xaml
@@ -131,5 +131,7 @@
             ComponentName="230-71-ECS7" Canvas.Left="462" Canvas.Top="141" RenderTransformOrigin="2.433,-0.34" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="230-71-ECS9" Canvas.Left="74" Canvas.Top="141" RenderTransformOrigin="2.433,-0.34" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel 
+            ComponentName="230-BRAKER" Canvas.Left="839" Canvas.Top="172" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
