V2502: Update after simulation

--- a/Prevu.Synoptics.V2502_Polymer_Processor/D464.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/D464.xaml
@@ -9,7 +9,7 @@
              mc:Ignorable="d" 
               d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="425" Width="468">
-        <Labels:Pipe HorizontalAlignment="Left" Margin="213,65,0,0" VerticalAlignment="Top" Color="Oil" Width="32" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="213,65,0,0" VerticalAlignment="Top" Color="Oil" Width="32" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-25-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -19,7 +19,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="42" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="305" Canvas.Top="292">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="42" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-03-MA1" Canvas.Left="305" Canvas.Top="292">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -29,7 +29,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="222" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="215" Canvas.Top="160">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="222" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-25-CV1" Canvas.Left="215" Canvas.Top="160">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -39,7 +39,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Color="Oil" Width="42" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="15" Canvas.Top="292">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Color="Oil" Width="42" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-03-MA1" Canvas.Left="15" Canvas.Top="292">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -49,7 +49,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Color="Oil" Width="116" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="171" Canvas.Top="216">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Color="Oil" Width="116" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-03-MA1" Canvas.Left="171" Canvas.Top="216">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -59,9 +59,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Oil" Width="295" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="34" Canvas.Top="273"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="101" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="227" Canvas.Top="51"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="206,119,0,0" VerticalAlignment="Top" Color="Oil" Width="46" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Oil" Width="295" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-03-MA1" Canvas.Left="34" Canvas.Top="273"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="101" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-25-CV1" Canvas.Left="227" Canvas.Top="51"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="206,119,0,0" VerticalAlignment="Top" Color="Oil" Width="46" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-25-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -71,7 +71,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="174" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="44" Canvas.Top="91"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="174" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-25-CV1" Canvas.Left="44" Canvas.Top="91"/>
         <Rectangle HorizontalAlignment="Left" Height="2" Stroke="Black" VerticalAlignment="Center" Width="54" RenderTransformOrigin="0.5,0.5" Canvas.Left="92" Canvas.Top="74">
             <d:Rectangle.RenderTransform>
                 <TransformGroup>
