--- a/Prevu.Synoptics.V2502_Polymer_Processor/P230.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P230.xaml
@@ -37,8 +37,8 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="306" RenderTransformOrigin="0.5,0.5" Height="15" StatusComponent="232-21-CV1" Canvas.Left="187" Canvas.Top="706" />
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="50" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="232-21-CV1" Canvas.Left="187" Canvas.Top="455" />
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="103" RenderTransformOrigin="0.5,0.5" StatusComponent="233-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="565" Canvas.Top="774" />
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="81" RenderTransformOrigin="0.5,0.5" StatusComponent="220-01-MA5" PipeHeight="Medium" Height="20" VisibilityComponent="220-24-CV1" VisibilitySignal="LS1" Canvas.Left="166" Canvas.Top="94"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="84" RenderTransformOrigin="0.5,0.5" StatusComponent="220-01-MA5" PipeHeight="Medium" Height="20" VisibilityComponent="220-24-CV1" VisibilitySignal="LS1" Canvas.Left="201" Canvas.Top="131">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="81" RenderTransformOrigin="0.5,0.5" StatusComponent="220-01-MA5" PipeHeight="Medium" Height="20" VisibilityComponent="220-24-CV1" VisibilitySignal="LS2" Canvas.Left="166" Canvas.Top="94"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="84" RenderTransformOrigin="0.5,0.5" StatusComponent="220-01-MA5" PipeHeight="Medium" Height="20" VisibilityComponent="220-24-CV1" VisibilitySignal="LS2" Canvas.Left="201" Canvas.Top="131">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -125,7 +125,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="291" RenderTransformOrigin="0.5,0.5" Height="13" StatusComponent="287-01-MA1" Canvas.Left="589" Canvas.Top="548" />
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="137" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="230-21-CV1" Canvas.Left="456" Canvas.Top="113"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="137" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="287-01-MA1" Canvas.Left="456" Canvas.Top="113"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="104" RenderTransformOrigin="0.5,0.5" StatusComponent="233-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="518" Canvas.Top="726" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
