--- a/Prevu.Synoptics.V2502_Polymer_Processor/P430.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P430.xaml
@@ -10,9 +10,9 @@
              x:Class="Prevu.Synoptics.P430" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="212" StatusComponent="430-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1038" Canvas.Top="222"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="106" StatusComponent="430-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1042" Canvas.Top="207"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="107" StatusComponent="430-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1042" Canvas.Top="237"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="212" StatusComponent="430-01-MA8" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1038" Canvas.Top="222"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="106" StatusComponent="430-01-MA8" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1042" Canvas.Top="207"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="107" StatusComponent="430-01-MA8" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1042" Canvas.Top="237"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="228" Color="Water" StatusComponent="420-71-ECS1" VisibilityComponent="" Canvas.Left="136" Canvas.Top="128" Icon="Right"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="164" StatusComponent="420-01-MA1" PipeHeight="Medium" Canvas.Left="509" Canvas.Top="219"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="132" RenderTransformOrigin="0.5,0.5" StatusComponent="420-71-ECS1" VisibilityComponent="" Canvas.Left="612" Canvas.Top="138">
@@ -37,7 +37,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="268" Color="Water" StatusComponent="450-02-MA1" Canvas.Left="874" Canvas.Top="750"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="268" Color="Water" StatusComponent="450-03-MA1" Canvas.Left="874" Canvas.Top="750"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="128" Color="Water" StatusComponent="450-01-MA1" Canvas.Left="300" Canvas.Top="324"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="226" StatusComponent="233-01-MA1" PipeHeight="Medium" Canvas.Left="214" Canvas.Top="219"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="417" Color="Water" StatusComponent="450-01-MA1" Canvas.Left="300" Canvas.Top="750"/>
@@ -84,7 +84,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="48" Color="Water" StatusComponent="440-01-MA1" VisibilityComponent="450-23-CV3" Canvas.Left="360" Canvas.Top="202"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="48" Color="Water" StatusComponent="420-71-ECS1" VisibilityComponent="" Canvas.Left="360" Canvas.Top="202"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="42" RenderTransformOrigin="0.5,0.5" StatusComponent="444-01-MA1" VisibilityComponent="" Canvas.Left="841" Canvas.Top="695">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -107,9 +107,9 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="196" Color="Water" StatusComponent="444-01-MA1" VisibilityComponent="" Canvas.Left="954" Canvas.Top="575"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="110" StatusComponent="430-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1140" Canvas.Top="297"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="110" StatusComponent="430-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1140" Canvas.Top="147"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="70" StatusComponent="430-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1109" Canvas.Top="177">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="110" StatusComponent="430-01-MA8" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1140" Canvas.Top="297"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="110" StatusComponent="430-01-MA8" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1140" Canvas.Top="147"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="70" StatusComponent="430-01-MA8" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1109" Canvas.Top="177">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -119,7 +119,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="67" StatusComponent="430-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1111" Canvas.Top="266">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="67" StatusComponent="430-01-MA8" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1111" Canvas.Top="266">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -326,7 +326,7 @@
         <Labels:JumpLabel HorizontalAlignment="Left" 
                       VerticalAlignment="Center" 
                       JumpFromLabel="420-01-MA1" 
-                      JumpToLabel="380-01-MA1" Canvas.Left="148" Canvas.Top="188"/>
+                      JumpToLabel="233-01-MA1" Canvas.Left="148" Canvas.Top="188"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="420-22-CV1" Canvas.Left="481" Canvas.Top="412"/>
@@ -357,12 +357,12 @@
                 </TransformGroup>
             </Labels:DeviceLabel.RenderTransform>
         </Labels:DeviceLabel>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="420-71-ECS1" Canvas.Left="147" Canvas.Top="76"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="420-71-ECS5" Canvas.Left="242" Canvas.Top="76"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="420-71-ECS1" Canvas.Left="157" Canvas.Top="66"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="420-71-ECS5" Canvas.Left="259" Canvas.Top="66"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="430-04-MA1" Canvas.Left="905" Canvas.Top="454"/>
