--- a/Prevu.Synoptics.V2502_Polymer_Processor/P464.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P464.xaml
@@ -74,7 +74,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="130" RenderTransformOrigin="0.5,0.5" StatusComponent="482-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="1186" Canvas.Top="688"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="307" StatusComponent="460-01-MA1" PipeHeight="Medium" Canvas.Left="493" Canvas.Top="222"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="170" StatusComponent="430-01-MA1" PipeHeight="Medium" Height="10" Canvas.Left="173" Canvas.Top="77"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="170" StatusComponent="430-01-MA8" PipeHeight="Medium" Height="10" Canvas.Left="173" Canvas.Top="77"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="147" Color="Water" StatusComponent="460-01-MA1" VisibilityComponent="" Canvas.Left="232" Canvas.Top="269"/>
         <Labels:Pipe Color="Water" Width="115" RenderTransformOrigin="0.5,0.5" Height="24" StatusComponent="464-21-CV1" Canvas.Left="498" Canvas.Top="503" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="71" Color="Water" StatusComponent="460-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="342" Canvas.Top="236">
@@ -88,8 +88,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Oil" Width="40" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="979" Canvas.Top="397" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="464-23-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Color="Oil" Width="40" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="979" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="464-23-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Color="Oil" Width="26" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="1004" Canvas.Top="467" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="464-23-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe Color="Oil" Width="40" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="979" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="464-23-CV1" VisibilitySignal="LS2"/>
+        <Labels:Pipe Color="Oil" Width="26" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-23-CV1" Canvas.Left="1004" Canvas.Top="467" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="464-23-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -109,7 +109,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Oil" Width="68" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-03-MA1" Canvas.Left="1022" Canvas.Top="437" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Oil" Width="68" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-25-CV1" Canvas.Left="1022" Canvas.Top="437" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="131" Height="19" Canvas.Left="949" Canvas.Top="609"/>
         <Machines:EXC_HeatExchanger HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Height="52" Width="66" Canvas.Left="577" Canvas.Top="489">
             <Machines:EXC_HeatExchanger.RenderTransform>
