--- a/Prevu.Synoptics.V2502_Polymer_Processor/WaterView.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/WaterView.xaml
@@ -527,16 +527,16 @@
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
         <Labels:GroupLabel VerticalAlignment="Center" Canvas.Top="286" Canvas.Left="897" HorizontalAlignment="Left" GroupName="430"/>
-        <Labels:GroupLabel GroupName="282" Canvas.Left="276" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="230" Canvas.Left="276" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="230" Canvas.Left="498" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="210" Canvas.Left="176" Canvas.Top="192" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:ValueLabel Canvas.Left="930" Canvas.Top="493" HorizontalAlignment="Left" VerticalAlignment="Center" TrendName="LEVEL" ComponentName="450-41-LT1" FontSize="16"/>
-        <Labels:ValueLabel Canvas.Left="930" Canvas.Top="511" HorizontalAlignment="Left" VerticalAlignment="Center" TrendName="VOLUME_CONTROL" ParameterName="ACT_VOLUME" ComponentName="450-41-LT1" FontSize="16" />
+        <Labels:ValueLabel Canvas.Left="923" Canvas.Top="511" HorizontalAlignment="Left" VerticalAlignment="Center" TrendName="VOLUME_CONTROL" ParameterName="ACT_VOLUME" ComponentName="450-41-LT1" FontSize="16" />
         <Labels:ValueLabel Canvas.Left="522" Canvas.Top="497" TrendName="LEVEL" ComponentName="282-41-LT1" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:ValueLabel Canvas.Left="522" Canvas.Top="515" TrendName="VOLUME_CONTROL" ParameterName="ACT_VOLUME" ComponentName="282-41-LT1" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:ValueLabel Canvas.Left="515" Canvas.Top="515" TrendName="VOLUME_CONTROL" ParameterName="ACT_VOLUME" ComponentName="282-41-LT1" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:GroupLabel GroupName="510" Canvas.Left="1471" Canvas.Top="384" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:ValueLabel Canvas.Left="1202" Canvas.Top="365" HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="508-41-LT1" TrendName="LEVEL"/>
-        <Labels:ValueLabel Canvas.Left="1202" Canvas.Top="385" HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="508-41-LT1" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL"/>
+        <Labels:ValueLabel Canvas.Left="1195" Canvas.Top="385" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="508-41-LT1" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL"/>
         <Labels:GroupLabel GroupName="520" Canvas.Left="1471" Canvas.Top="511" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="530" Canvas.Left="1471" Canvas.Top="629" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
