--- a/Prevu.Synoptics.V2502_Polymer_Processor/P210.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P210.xaml
@@ -33,7 +33,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Air" Width="75" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-24-CV1" Canvas.Left="1167" Canvas.Top="375" />
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="162" PipeHeight="Medium" StatusComponent="220-01-MA5" Height="30"  VisibilityComponent="220-24-CV1" VisibilitySignal="LS1" Canvas.Left="1183" Canvas.Top="271"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="162" PipeHeight="Medium" StatusComponent="220-01-MA5" Height="30"  VisibilityComponent="220-24-CV1" VisibilitySignal="LS2" Canvas.Left="1183" Canvas.Top="271"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="290" PipeHeight="Medium" StatusComponent="210-01-MA1" Height="30" Canvas.Left="655" Canvas.Top="251" />
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="66" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-21-CV1" Canvas.Left="472" Canvas.Top="367" />
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="70" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="562" Canvas.Top="496" >
@@ -162,7 +162,7 @@
             JumpFromLabel="220-24-CV1" 
             JumpToLabel="230-01-MA1" Canvas.Left="1325" Canvas.Top="251" />
         <Labels:JumpLabel 
-            JumpFromLabel="210-21-CV1" 
+            JumpFromLabel="210-01-MA1" 
             JumpToLabel="450-03-MA1" HorizontalAlignment="Center" Canvas.Left="389" Canvas.Top="277" VerticalAlignment="Top"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="220-VIEW" DetailsPageName="D220" HideComponentName="True" Canvas.Left="1012" Canvas.Top="181" />
     </Canvas>
