--- a/Prevu.Synoptics.V2502_Polymer_Processor/P680.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P680.xaml
@@ -9,7 +9,7 @@
              x:Class="Prevu.Synoptics.P680" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="89" StatusComponent="659-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="659-22-ZS1" VisibilityComponent="659-22-CV1" Canvas.Left="948" Canvas.Top="449">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="89" StatusComponent="659-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="LS1" VisibilityComponent="659-22-CV1" Canvas.Left="948" Canvas.Top="449">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -29,7 +29,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="95" StatusComponent="659-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="659-21-ZS1" VisibilityComponent="659-21-CV1" Canvas.Left="598" Canvas.Top="453">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="95" StatusComponent="659-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="LS1" VisibilityComponent="659-21-CV1" Canvas.Left="598" Canvas.Top="453">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -159,7 +159,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="59" StatusComponent="659-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="" VisibilitySignal="" Canvas.Left="616" Canvas.Top="343">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="59" StatusComponent="659-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="659-01-MA1" VisibilitySignal="CMD1" Canvas.Left="616" Canvas.Top="343">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -169,7 +169,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="53" StatusComponent="659-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="966" Canvas.Top="343">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="53" StatusComponent="659-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="966" Canvas.Top="343" VisibilitySignal="CMD2" VisibilityComponent="659-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
